Finishing up serving assets, working on parsing libraries and injecting into the http server

--- a/tmpl/defaultView.html
+++ b/tmpl/defaultView.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	#sect:includes
-	exampleLib1
-	exampleLib2
-	#endsect:includes
+#sect:includes exampleLib1, exampleLib2 #endsect:includes
 </head>
 <body>
 
@@ -14,8 +11,6 @@
 
 </body>
 
-	#sect:templates
-	template1.html
-	#endsect:templates
+#sect:templates template1 #endsect:templates
 
 </html>
