Worked on getting libraries to load correctly and from proper directories

--- a/tmpl/defaultView.html
+++ b/tmpl/defaultView.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-#sect:includes exampleLib1, exampleLib2 #endsect:includes
+{includes}
 </head>
 <body>
 
@@ -11,6 +11,6 @@
 
 </body>
 
-#sect:templates template1 #endsect:templates
+{includes}
 
 </html>
